Fixing icons on mobile. Again? Yes, again.

--- a/seawaterfox.com/main/css/style.css
+++ b/seawaterfox.com/main/css/style.css
@@ -1136,6 +1136,9 @@ span.locate img {
 	}
 }
 @media screen and (max-width: 800px){
+	.service-section-grid .fa {
+		margin-left: 0px;
+	}
 	span.menu{
 		width:28px;
 		height:28px;
